broadcast/assets/css/htu.css
/* $ Global */

body {
	font: 300 1em/1.4 Ubuntu, 'lucida sans unicode', 'lucida grande', 'Trebuchet MS', verdana, arial, helvetica, helve, sans-serif;
	color: #333;
	text-align: center;
	background: #fafafa;
}

header {
	background: #fafafa;
	padding-bottom: 0;
}

footer {
	background: #111111;
	border-top: 6px solid #DD4814;
	-webkit-border-radius: 12px 12px 0 0;
	border-radius: 12px 12px 0 0;
	font: 400 1em/1.7 Ubuntu,'lucida sans unicode','lucida grande','Trebuchet MS',verdana,arial,helvetica,helve,Sans;
	text-align: left;
	color: #bbb;
}

.top {
	border-top: 6px solid #ddd;
	-webkit-border-radius: 12px 12px 0 0;
	border-radius: 12px 12px 0 0;
	padding: 1px 2% 2%;
}
.bottom {
	border-bottom: 6px solid #ddd;
	-webkit-border-radius: 0 0 12px 12px;
	border-radius: 0 0 12px 12px;
	min-height: 12px;
	padding: 1px 2%;
}
.last {
	padding: 6% 2%;
	background: transparent;
}
/* TODO ^ Responsive ^ */


/* $ Typography */

h1, h2, h3, h4, h5, h6 {
	font-family: Ubuntu, MuseoSlab300, 'lucida sans unicode', 'lucida grande', 'Trebuchet MS', verdana, arial, helvetica, helve, sans-serif;
	font-weight: 300;
	margin: 0;
	margin-left: 10px !important;
	margin-right: 10px !important;
	padding: 0;
}

h1 {
	font: 300 2.5em/1 Ubuntu,'lucida sans unicode','lucida grande','Trebuchet MS',verdana,arial,helvetica,helve,Sans;
	margin: .6em 0;
}
h1 a { color: #777; }
h1 a:hover { color: #DD4814; }

h2 {
	font: 300 1.7em/1.4 Ubuntu,'lucida sans unicode','lucida grande','Trebuchet MS',verdana,arial,helvetica,helve,Sans;
	color: #222222;
	margin: .5em 0;
}
.content h2,
#content h2
{ border-bottom: 3px solid #efefef; }
h2 a { color: #444; }
h2 a:hover { color: #333; }

h3 {
	font: 300 1.5em/1.4 Ubuntu,'lucida sans unicode','lucida grande','Trebuchet MS',verdana,arial,helvetica,helve,Sans;
	color: #222222;
	margin: .5em 0;
}

h4 {
	font: 300 1.3em/1.25 Ubuntu,'lucida sans unicode','lucida grande','Trebuchet MS',verdana,arial,helvetica,helve,Sans;
	color: #333333;
	margin: 1em 0 .5em;
}

h5 {
	font: 400 1em/1.4 Ubuntu,'lucida sans unicode','lucida grande','Trebuchet MS',verdana,arial,helvetica,helve,Sans;
	color: #555555;
	margin: .5em 0;
}

h6 {
	font: 400 1em/1.4 Ubuntu,'lucida sans unicode','lucida grande','Trebuchet MS',verdana,arial,helvetica,helve,Sans;
	color: #666666;
	margin: .5em 0;
}

a {
	text-decoration: none;
	font-weight: 400;
	color: #DD4814;
	-webkit-transition: all 300ms ease-in-out;
	-moz-transition: all 300ms ease-in-out;
	-ms-transition: all 300ms ease-in-out;
	-o-transition: all 300ms ease-in-out;
	transition: all 300ms ease-in-out;
}
a:hover, a:active, a:focus {
	color: #DD4814;
	-webkit-transition: all 300ms ease-in-out;
	-moz-transition: all 300ms ease-in-out;
	-ms-transition: all 300ms ease-in-out;
	-o-transition: all 300ms ease-in-out;
	transition: all 300ms ease-in-out;
}



/* $ Navigation */

header nav a {
	font: 400 1em/1 Ubuntu,'lucida sans unicode','lucida grande','Trebuchet MS',verdana,arial,helvetica,helve,Sans;
	padding: 1em 0;
	margin: 1em 0 0;
	-webkit-border-radius: 3px 3px 0 0;
	border-radius: 3px 3px 0 0;
	display: block;
	text-align: center;
}
header nav a:hover {
	background: #DDDDDD;
	color: #DD4814;
}
header nav ul { margin-bottom: 0; }

footer a { color: #ccc; }
footer a:hover { color: #eee; }
footer h4 { color: #bbb; }
footer p { padding: 5px; }



/* $ Adverts */

.ad-banner {
	width: 728px;
	min-height: 111px;
	margin: 3% auto !important;
}
.ad-skyscraper {
	margin: 3% auto !important;
	float: left;
	width: 336px;
	min-height: 581px;
}
.adsist.Rectangle.Medium {
	width: 300px;
	height: 250px;
	margin: 0 auto;
}
.about-ads {
	margin: 0;
	text-align: right;
	color: #AEA79F;
	font: 400 .8em/1 Ubuntu,'lucida sans unicode','lucida grande','Trebuchet MS',verdana,arial,helvetica,helve,Sans;
}
.about-ads a { color: #AEA79F; }
.about-ads a:hover { color: #DD4814; }
@media only screen and ( max-width: 800px ){ .ad-banner { width: 320px; min-height: 71px; } }







.spanpage.latest {
	background: #ddd url(../images/ubuntu-background-1310.jpg) no-repeat top center fixed;
	background-size: cover;
}




.authheader {
	float: right;
	text-align: right;
	margin: 10px 0 -10px;
}

.box {
	-webkit-box-shadow: 0 2px 2px 0 #AEA79F;
	box-shadow: 0 2px 2px 0 #AEA79F;
	margin: 5px;
	padding: 1px 3px;
}

.general { background: #eee; border-radius: 3px; padding: 1%; }
.warning { background: #DF382C; color: #ffffff; border-radius: 3px; padding: 1%; }
.info { background: #3a8ee6; color: #ffffff; border-radius: 3px; padding: 1%; }
.warning h3, .info h3, .warning h4, .info h4 { color: #ffffff; }
.warning a, .info a { color: #efefef; }
.warning a:hover, .info a:hover { color: #ffffff; }
.warning .box, .info .box {
	-webkit-box-shadow: 0 1px 2px 0 #ffffff;
	box-shadow: 0 1px 2px 0 #ffffff;
}


.download {
	color: #fff;
	background: #DD4814;
	padding: 3%;
	-webkit-radius: 3px;
	border-radius: 3px;
	display: inline-block;
	margin: 0 auto;
	text-align: center;
}
.download:hover { color: #fff; }
.breaker {
	clear: both;
	height: 10px;
}
.break { margin-top: 10%; }

code, .code {
	color: #FAFAFA;
	font: 400 1em/1.5em 'Ubuntu Mono',monospace;
	text-align: center;
	border: none;
	border-radius: 3px;
	outline: 0px;
	width: 94%;
	padding: 3%;
	margin: 2% 0;
	display: block;
	background-color: #333333;
	resize: none;
}
.code.resize { padding: 3% 3% 0 3%; }
textarea.code { text-align: left; }

.editable { color: #3a8ee6; }

b, strong, .strong, .bold { font-weight: 400; }

p {
	-webkit-hyphens: auto;
	-webkit-hyphenate-character: '\2010';
	-webkit-hyphenate-limit-after: 1;
	-webkit-hyphenate-limit-before: 3;
	-moz-hyphens: auto;
	hyphens: auto;
	text-align: justify;
}
p.intro, p.important {
	font: 300 1em/1.5 Ubuntu, MuseoSlab100, 'lucida sans unicode', 'lucida grande', 'Trebuchet MS', verdana, arial, helvetica, helve, sans-serif;
	margin-bottom: .5em;
}
p, ol, ul, dl, address {
	margin: .5em 0;
	font-size: .9em;
}
ul { list-style: disc; }
ol { list-style: decimal; }
ul, ol {
	margin: 0 0 1.5em 0;
	padding: 0 0 0 24px;
}
li ul, li ol {
	margin: 0;
	font-size: 1em;
}
dl, dd { margin-bottom: 1.5em; }
dt { font-weight: normal; }

hr {
	display: block;
	margin: 1em 0;
	padding: 0;
	height: 1px;
	border: 0;
	border-top: 1px solid #ccc;
}

small { font-size: 0.9em; }
.grey { color: #AEA79F; }

sub, sup {
	font-size: 0.9em;
	line-height: 0;
	position: relative;
	vertical-align: baseline;
}
sup { top: -.5em; }
sub { bottom: -.25em; }
.subtext { color: #666; }

table {
	border-collapse: collapse;
	border-spacing: 0;
	margin-bottom: 1.4em;
	width: 100%	;
}
th { font-weight: 400; }
tr:nth-child(even) { background: #eee; }
th, td, caption { padding: .25em 10px .25em 5px; }
tfoot { font-style: italic; }
caption { background-color: transparent; }

form {
	margin: 0;
	display:  inline-block;
}
fieldset {
	margin-bottom: 1.5em;
	padding: 0;
	border-width: 0;
}
legend {
	margin-left: -7px;
	padding: 0;
	border-width: 0;
}
label {
	font-weight: normal;
	cursor: pointer;
	display: block;
	margin: 10px 0 0 0;
	position: relative;
	top: 0;
	left: 0;
}
label.inline {
	display: inline;
	margin: 0;
}
label span {
	color: #666;
	font-size: .9em;
}
label span.right {
	position: absolute;
	bottom: 0;
	right: 1em;
	text-align: right;
}
label.disabled {
	color: #ccc;
}
button, search, input, select, textarea {
	font-size: 100%;
	margin: 0;
	vertical-align: baseline;
	vertical-align: middle;
}
button, input {
	line-height: normal;
	overflow: visible;
	text-align: center;
}
button, input[type='button'], input[type='reset'], input[type='submit'] {
	cursor: pointer;
	margin: 60px auto;
	padding: 2% 3%;
	width: auto;
	color: #333;
	font-size: 1.5em;
	line-height: 1.3;
	text-align: center;
}
button, input[type='button'], input[type='reset'], input[type='submit'] { -webkit-appearance: button; }
input[type='checkbox'], input[type='radio'] { box-sizing: border-box; }
input::-webkit-input-placeholder, input:-moz-placeholder, .placeholder { color: #bbb; }
input::-moz-focus-inner { border: 0; }
input[type='search'] {
	-webkit-box-sizing: content-box;
	-moz-box-sizing: content-box;
	box-sizing: content-box;
}
input[disabled='disabled'], input.disabled {
	color: #999;
	background: #f5f5f5;
}
button::-moz-focus-inner, input::-moz-focus-inner {
	padding: 0;
	border: 0;
}
input[type='checkbox'], input[type='radio'] {
	box-sizing:  border-box;
	width: auto;
	display: inline-block;
	margin: 0;
	box-sizing: border-box;
}
button, input, select, textarea {
	outline: 0;
	font-family: Ubuntu, MuseoSlab100, lucida sans unicode, 'lucida grande', 'Trebuchet MS', verdana, arial, helvetica, helve, sans-serif;
	color: #333;
}
input {
	display: block;
	width: 98%;
	margin: 0 0 20px 0;
	border: 1px solid #eee;
	font-size: 1em;
	padding: 1%;
	outline: 0;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	border-radius: 5px;
	background: #fff;
}
textarea {
	text-align: left;
	width: 98%;
	margin: 0 0 20px 0;
	border: 1px solid #eee;
	padding: 1%;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	border-radius: 5px;
	overflow: auto;
	vertical-align: top;
}
button.no, input[type='button'].no, input[type='reset'].no, input[type='submit'].no {
	display: inline-block;
	border: none;
	box-shadow: none;
	margin: 0;
	font: 1em/1.4 Ubuntu, 'lucida sans unicode', 'lucida grande', 'Trebuchet MS', verdana, arial, helvetica, helve, sans-serif;
	color: #DD4814;
	background: transparent;
	transition: all 300ms ease-in-out;
	-o-transition: all 300ms ease-in-out;
	-ms-transition: all 300ms ease-in-out;
	-moz-transition: all 300ms ease-in-out;
	-webkit-transition: all 300ms ease-in-out;
}
button.no:hover, input[type='button'].no:hover, input[type='reset'].no:hover, input[type='submit'].no:hover {
	color: #3a8ee6;
	transition: all 300ms ease-in-out;
	-o-transition: all 300ms ease-in-out;
	-ms-transition: all 300ms ease-in-out;
	-moz-transition: all 300ms ease-in-out;
	-webkit-transition: all 300ms ease-in-out;
}




/* Google Search Box Fixes */
.gsc-search-box td { vertical-align: top !important; }
.gsc-input { padding-top: 0px !important; }
.gsc-input input { text-align: left; margin: 0 !important; height: 22px !important; }
.gsc-input-box {
	height: 30px !important;
	border: 1px solid #ccc !important;
	-webkit-border-radius: 2px !important;
	-moz-border-radius: 2px !important;
	border-radius: 2px !important;
}
.gsc-search-button { padding: 0px !important; }
.cse .gsc-search-button input.gsc-search-button-v2, input.gsc-search-button-v2 { padding: 8px 27px 7px !important; }
.gsc-control-cse { padding: 2em 0 0 !important; }
.gs_tti0 { padding: 4px 6px !important; }
.gsib_b { padding: 2px 6px !important; }
.gsc-search-box table, .gsc-search-box tr, .gsc-search-box td 	{ outline: none !important; }
.gsc-webResult.gsc-result, .gsc-results .gsc-imageResult, .gsc-results .gsc-cursor-box .gsc-cursor-page { padding: 10px !important; }
.cse .gsc-search-button input.gsc-search-button-v2, input.gsc-search-button-v2 { margin-top: 0 !important; }
.gsc-control-cse, .gsc-control-cse .gsc-table-result { font-family: Ubuntu, sans-serif !important; }
.gsc-selected-option { font-weight: normal; }

